--- a/packages/components/src/ResourcePicker/Toolbar/NameFilter/NameFilter.scss
+++ b/packages/components/src/ResourcePicker/Toolbar/NameFilter/NameFilter.scss
@@ -1,9 +1,10 @@
 .name-filter {
+	flex: 1;
+
 	> * {
 		display: inline-block;
 		height: 100%;
 	}
-
 	.option-label {
 		margin-right: $padding-small;
 	}
